<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/select_picture"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:contentDescription="@string/empty_string"
                android:onClick="onClick"
                android:src="@drawable/picture" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/picture"
                android:textColor="@color/item_desc_txt_color" />
        </LinearLayout>



        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/send_file"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:contentDescription="@string/empty_string"
                android:onClick="onClick"
                android:src="@drawable/file" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/file"
                android:textColor="@color/item_desc_txt_color" />
        </LinearLayout>
    </LinearLayout>




</LinearLayout>